# cardano-crypto

./: .gitignore  CHANGELOG.md  CI_CD_GUIDE.md  CONTRIBUTING.md  Cargo.toml  LIBSODIUM_COMPATIBILITY.md  LICENSE-APACHE  LICENSE-MIT  MODULE_ORGANIZATION.md  README.md  STATUS.md  TESTING_COMPLETE_SUMMARY.md  TEST_INFRASTRUCTURE.md
.github/workflows/: ci.yml  publish.yml
examples/: dsign_sign_verify.rs  kes_lifecycle.rs  vrf_basic.rs
src/: lib.rs
src/cbor/: mod.rs
src/common/: curve.rs  error.rs  hash.rs  mod.rs  security.rs  traits.rs  vrf_constants.rs
src/dsign/: ed25519.rs  mod.rs
src/hash/: blake2b.rs  mod.rs  sha.rs
src/kes/: compact_sum.rs  hash.rs  mod.rs  single.rs  sum.rs  test_vectors.rs
src/kes/single/: basic.rs  compact.rs  mod.rs
src/kes/sum/: basic.rs  compact.rs  mod.rs
src/seed/: mod.rs
src/vrf/: draft03.rs  draft13.rs  mod.rs  test_vectors.rs
src/vrf/cardano_compat/: mod.rs  point.rs  prove.rs  verify.rs
tests/: kes_golden_tests.rs
