[package]
name = "cardano-crypto"
version = "1.0.0"
edition = "2021"
rust-version = "1.91"
authors = ["FractionEstate <contact@fractionestate.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/FractionEstate/cardano-crypto"
documentation = "https://fractionestate.github.io/cardano-crypto/"
homepage = "https://github.com/FractionEstate/cardano-crypto"
description = "Pure Rust implementation of Cardano cryptographic primitives (VRF, KES, DSIGN, Hash) with 100% compatibility with cardano-node"
keywords = ["cardano", "cryptography", "vrf", "kes", "blockchain"]
categories = ["cryptography", "no-std"]
readme = "README.md"
exclude = [
    "/.github",
    "/target",
    "*.profraw",
    "*.profdata",
]

[features]
default = ["std", "thiserror", "vrf", "kes", "dsign", "hash"]

# Standard library support
std = ["alloc", "sha2/std", "zeroize/std", "serde?/std"]
alloc = ["curve25519-dalek/alloc", "zeroize/alloc"]

# Component features - allows users to enable only what they need
vrf = ["dsign", "hash", "alloc"]
kes = ["dsign", "hash", "alloc"]
dsign = ["hash", "alloc"]
hash = ["alloc"]
cbor = ["alloc"]
seed = ["hash", "alloc"]

# VRF variants
vrf-draft03 = ["vrf"]
vrf-draft13 = ["vrf"]

# KES variants
kes-single = ["kes"]
kes-sum = ["kes"]
kes-compact = ["kes"]

# Optional features
serde = ["dep:serde"]
metrics = []
logging = []
vrf-debug = ["logging"]
kes-metrics = ["metrics"]

[dependencies]
# Core cryptographic dependencies (required for Cardano compatibility)
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0", optional = true }

# Hash functions
blake2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
ripemd = { version = "0.1", default-features = false }
sha3 = { version = "0.10", default-features = false }
subtle = { version = "2.6", default-features = false }

# Serialization (optional)
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[[example]]
name = "vrf_basic"
required-features = ["vrf"]

[[example]]
name = "kes_lifecycle"
required-features = ["kes"]

[[example]]
name = "dsign_sign_verify"
required-features = ["dsign"]

# ============================================================================
# Build Optimization Profiles
# ============================================================================

[profile.dev]
# Development profile - fast compilation, minimal optimization
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
# Production release profile - maximum optimization
opt-level = 3           # Maximum optimization
debug = false           # No debug info in release
debug-assertions = false
overflow-checks = false
lto = "fat"            # Full Link-Time Optimization for smaller, faster code
panic = 'abort'        # Abort on panic (smaller binary, no unwinding)
incremental = false
codegen-units = 1      # Better optimization, slower compile
strip = true           # Strip symbols for smaller binary

[profile.release-with-debug]
# Release with debug info (for profiling)
inherits = "release"
debug = true
strip = false

[profile.bench]
# Benchmarking profile
inherits = "release"
debug = false
lto = "fat"

[profile.test]
# Test profile - balance between speed and compilation time
inherits = "dev"
opt-level = 1          # Some optimization for faster tests
